<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="guaidaodl.github.io.toolbarcoloranimate.MainActivity"
    tools:showIn="@layout/activity_main">

    <android.support.design.widget.TabLayout
        android:id="@+id/content_main.tab"
        app:tabTextColor="#FFFFFF"
        app:tabIndicatorColor="#FFFF00"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TabItem
            android:id="@+id/content_main.tab.red"
            android:text="Red"/>

        <android.support.design.widget.TabItem
            android:id="@+id/content_main.tab.green"
            android:text="Green"/>

        <android.support.design.widget.TabItem
            android:id="@+id/content_main.tab.blue"
            android:text="Blue"/>

    </android.support.design.widget.TabLayout>
</RelativeLayout>
